# heline.dev

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  build.sh  docker-compose.yml  gitlab.json  go.mod  go.sum  main.go  nginx-server-setup.md  rust.json  test_api_search.sh  test_solr_highlighting.go
.github/workflows/: go.yml
buscador/: Cargo.toml
buscador/src/: index.rs  main.rs  query.rs
cmd/: commands.go  docset.go  github.go  server.go
core/entity/: code_search.go  docset.go
core/module/solr/: docset_search.go  reset_index.go  reset_index_test.go  search.go  search_integration_test.go  setup.go  setup.go.bak  (+1 more)
crawler/docset/: crawler.go
crawler/github/: crawler.go  parser.go
heline-indexer/: Cargo.toml  Dockerfile  repo.json
heline-indexer/src/: api.rs  arg.rs  indexer.rs  main.rs  utils.rs
heline-indexer/src/git/: mod.rs
http/: cors.go  docset.go  handler.go  indexer.go  model.go  reset.go  reset_test.go
scripts/: bootstrap.sh  env.sh  indexing.sh  run.sh  scrape.sh  solr.sh
search-server/: Cargo.toml  README.md
search-server/src/: index.rs  main.rs
solr/: client.go  docset.go  insert.go  search.go  solr.go
ui/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
ui/components/: code-search-result.js  docs-search-result.js  modal.js  sub-navigation.js  top-navigation.js
ui/lib/: onKeyPress.js  render-array.js  useDebounce.js  useGetDocumentByID.js  useSearchCode.js  useSearchDocument.js
ui/pages/: _app.js  index.js  search.js
ui/style/: app.css  highlight.css
utils/: encoder.go  string.go
