[package]
name = "heline-indexer"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "heline-indexer"
path = "src/main.rs"

[dependencies]
select = "0.6.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.78"
hl_core = "0.1.3"
loading = "0.1.2"
ignore = "0.4.23"
warp = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
